修改背景地址

--- a/plan/less/plane.less
+++ b/plan/less/plane.less
@@ -34,7 +34,7 @@ img:nth-of-type(1){position: absolute;transition: all 0s}
     background-color:rgba(70,110, 220,1); 
     .bigbox1{
         .bigbox;
-        background-image:url(/img/background-start.png);
+        background-image:url(../img/background-start.png);
         background-size: 100% 100%;
         display:block;
         button{.button;top: 400px;z-index: 100;} 
@@ -44,7 +44,7 @@ img:nth-of-type(1){position: absolute;transition: all 0s}
         .bigbox;
         // transition: all 0.1s;
         display:none;
-        background-image: url(/img/background-game.png);
+        background-image: url(../img/background-game.png);
         .grade
         {
             position: absolute;
