--- a/JavaScript/Wheel/less/wheel.less
+++ b/JavaScript/Wheel/less/wheel.less
@@ -4,7 +4,7 @@
     margin: 0 auto;
     width: 650px;
     height:600px;
-    background-image: url(/Wheel/img/turntable-bg.jpg);
+    background-image: url(../img/turntable-bg.jpg);
     background-repeat: no-repeat;     
     .box1{
     position: absolute;
@@ -12,7 +12,7 @@
     top: 60px;
     height: 450px;
     width: 450px;
-    background-image:url(/Wheel/img/turntable.png);
+    background-image:url(../img/turntable.png);
     transform-style: preserve-3d;
     transition: all 3s;
     background-repeat: no-repeat;     
@@ -23,7 +23,7 @@
         left: 254px;
         height: 228px;
         width: 174px;
-        background-image: url(/Wheel/img/pointer.png);
+        background-image: url(../img/pointer.png);
         background-repeat: no-repeat;
     }
     
