--- a/plan/less/plane.less
+++ b/plan/less/plane.less
@@ -29,15 +29,16 @@ img:nth-of-type(1){position: absolute;transition: all 0s}
 }
 .superbox
 {
-   .bigbox;
-//    transition: all .1s;
-    background-color:rgba(70,110, 220,1); 
+    .bigbox;
     .bigbox1{
         .bigbox;
         background-image:url(../img/background-start.png);
         background-size: 100% 100%;
         display:block;
-        button{.button;top: 400px;z-index: 100;} 
+        button:nth-of-type(1){.button;top: 250px;z-index: 100;width: 140px;} 
+        button:nth-of-type(2){.button;top: 290px;z-index: 100;width: 140px;} 
+        button:nth-of-type(3){.button;top: 330px;z-index: 100;width: 140px;} 
+        button:nth-of-type(4){.button;top: 400px;z-index: 100;} 
     }
     .bigbox2
     {
